Add jib plugin and docker compose